// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContributionCard /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "borderColor": "#eee",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
  withoutBorder={false}
>
  <div
    className="sc-AxjAm ekdWbF"
  >
    <div
      className="rmq-ac5e1496 rmq-5b3da7a1 rmq-ce79a9e0 k-Grid"
      data-radium={true}
      style={
        Object {
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--10@l"
        data-radium={true}
      >
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            className="sc-AxjAm jDynbx"
          >
            <h1
              className="sc-AxirZ gEwSiw"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom title mount
            </h1>
          </div>
          <div
            className="sc-AxjAm ccCISE"
          >
            <span
              className="sc-AxiKw gGNgIn"
            />
          </div>
          
          <div
            className="sc-AxjAm iOcWzD"
          >
            <p
              className="k-Paragraph k-Paragraph--tertiary k-Paragraph--withoutMargin"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom text description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-ac5e1496{padding-left: 30px !important;
padding-right: 30px !important;}}
@media (min-width: 768px){ .rmq-5b3da7a1{padding-left: 40px !important;
padding-right: 0 !important;}}
@media (min-width: 1080px){ .rmq-ce79a9e0{padding-left: 115px !important;
padding-right: 0 !important;}}",
      }
    }
  />
</div>
`;

exports[`<ContributionCard /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "borderColor": "#eee",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
  withoutBorder={false}
>
  <div
    className="sc-AxjAm ekdWbF"
  >
    <div
      className="rmq-ac5e1496 rmq-5b3da7a1 rmq-ce79a9e0 k-Grid"
      data-radium={true}
      style={
        Object {
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--7@l"
        data-radium={true}
      >
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            className="sc-AxjAm jDynbx"
          >
            <h1
              className="sc-AxirZ gEwSiw"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom title mount
            </h1>
          </div>
          <div
            className="sc-AxjAm ccCISE"
          >
            <span
              className="sc-AxiKw gGNgIn"
            />
          </div>
          <div
            className="sc-AxjAm bpEnKz"
          >
            <p
              className="k-u-color-font1 k-u-size-huge k-u-weight-bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Custom title description
            </p>
          </div>
          <div
            className="sc-AxjAm bsGvJV"
          >
            <p
              className="k-Paragraph k-Paragraph--tertiary k-Paragraph--withoutMargin"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            className="sc-AxjAm ccCISE"
          >
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Custom title contributors 
              <span
                className="k-u-weight-light"
              >
                Custom value contributors
              </span>
            </span>
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Custom title delivery 
              <span
                className="k-u-weight-light"
              >
                Custom value delivery
              </span>
            </span>
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Custom title availability 
              <span
                className="k-u-weight-light"
              >
                Custom value availability
              </span>
            </span>
          </div>
        </div>
        <div
          className="sc-AxjAm iOcWzD"
        >
          <button
            aria-labelledby="Custom text button"
            className="rmq-b016fca7 k-Button k-Button--helium k-Button--big"
            data-radium={true}
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "lineHeight": "1.3rem",
                "padding": "1.375rem 1.875rem",
                "width": "100%",
              }
            }
            tabIndex={null}
            type="button"
          >
            Custom text button
          </button>
          <div
            className="sc-AxjAm ksLovO"
          >
            <div
              data-radium={true}
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                className="sc-AxhCb dbedwk"
                disabled={false}
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              >
                <span
                  className="sc-AxhUy efrIZw"
                >
                  <svg
                    className="k-IconBadge__svg"
                    fill="#fff"
                    height="8"
                    viewBox="0 0 11 8"
                    width="11"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
                    />
                  </svg>
                </span>
              </span>
              <div
                data-radium={true}
                style={
                  Object {
                    "display": "flex",
                    "lineHeight": "normal",
                  }
                }
              >
                <span
                  className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
                >
                  Custom my contribution
                  <br />
                  <a
                    className="k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                    href="Custom manage link contribution"
                  >
                    Custom manage contribution
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rmq-c7c1445b k-Grid__col--12 k-Grid__col--4@s k-Grid__col--offset-1@s"
        data-radium={true}
        style={Object {}}
      >
        <div
          className="sc-AxjAm StDqN"
        >
          <div
            data-radium={true}
            disabled={false}
            style={Object {}}
          >
            <img
              alt="Image alt"
              data-radium={true}
              src="#image"
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-ac5e1496{padding-left: 30px !important;
padding-right: 30px !important;}}
@media (min-width: 768px){ .rmq-5b3da7a1{padding-left: 40px !important;
padding-right: 0 !important;}}
@media (min-width: 1080px){ .rmq-ce79a9e0{padding-left: 115px !important;
padding-right: 0 !important;}}
@media (min-width: 768px){ .rmq-ef57b76a{font-size: 16px !important;
margin-right: 30px !important;}}
@media (max-width: 767px){ .rmq-b016fca7{width: calc(100% + 4px) !important;
position: relative !important;
left: -2px !important;
bottom: -2px !important;}}
@media (min-width: 768px){ .rmq-c7c1445b{padding-right: 50px !important;}}",
      }
    }
  />
</div>
`;

exports[`<ContributionCard /> with tiny version matches with snapshot 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "borderColor": "#eee",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
  withoutBorder={false}
>
  <div
    className="sc-AxjAm dCdSew"
  >
    <div
      className="k-Grid"
      data-radium={true}
      style={
        Object {
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <div
        className="k-Grid__col--12"
        data-radium={true}
      >
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            className="sc-AxjAm jDynbx"
          >
            <h1
              className="sc-AxirZ fVRbfQ"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom title mount
            </h1>
          </div>
          <div
            className="sc-AxjAm ccCISE"
          >
            <span
              className="sc-AxiKw gGNgIn"
            />
          </div>
          <div
            className="sc-AxjAm bpEnKz"
          >
            <p
              className="k-u-color-font1 k-u-size-big k-u-weight-bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Custom title description
            </p>
          </div>
          <div
            className="sc-AxjAm bsGvJV"
          >
            <p
              className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            className="sc-AxjAm ccCISE"
          >
            <div>
              <span
                className="k-u-color-font1 k-u-weight-regular"
                data-radium={true}
                style={
                  Object {
                    "fontSize": 14,
                    "marginRight": 0,
                  }
                }
              >
                Custom title contributors 
                <span
                  className="k-u-weight-light"
                >
                  Custom value contributors
                </span>
              </span>
            </div>
            <div>
              <span
                className="k-u-color-font1 k-u-weight-regular"
                data-radium={true}
                style={
                  Object {
                    "fontSize": 14,
                    "marginRight": 0,
                  }
                }
              >
                Custom title delivery 
                <span
                  className="k-u-weight-light"
                >
                  Custom value delivery
                </span>
              </span>
            </div>
            <div>
              <span
                className="k-u-color-font1 k-u-weight-regular"
                data-radium={true}
                style={
                  Object {
                    "fontSize": 14,
                    "marginRight": 0,
                  }
                }
              >
                Custom title availability 
                <span
                  className="k-u-weight-light"
                >
                  Custom value availability
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="k-Grid__col--12"
        data-radium={true}
        style={
          Object {
            "paddingRight": 10,
          }
        }
      >
        <div
          className="sc-AxjAm StDqN"
        >
          <div
            data-radium={true}
            disabled={false}
            style={Object {}}
          >
            <img
              alt="Image alt"
              data-radium={true}
              src="#image"
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-AxjAm iySa-Dp"
    >
      <div
        className="k-Grid"
        data-radium={true}
        style={
          Object {
            "paddingLeft": 20,
            "paddingRight": 20,
          }
        }
      >
        <div
          className="k-Grid__col--12"
        >
          <div
            data-radium={true}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <span
              className="sc-AxhCb dbedwk"
              disabled={false}
              style={
                Object {
                  "marginRight": 10,
                }
              }
            >
              <span
                className="sc-AxhUy efrIZw"
              >
                <svg
                  className="k-IconBadge__svg"
                  fill="#fff"
                  height="8"
                  viewBox="0 0 11 8"
                  width="11"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
                  <path
                    d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
                  />
                </svg>
              </span>
            </span>
            <div
              data-radium={true}
              style={
                Object {
                  "display": "flex",
                  "lineHeight": "normal",
                }
              }
            >
              <span
                className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
              >
                Custom my contribution
                <br />
                <a
                  className="k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                  href="Custom manage link contribution"
                >
                  Custom manage contribution
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-labelledby="Custom text button"
      className="k-Button k-Button--helium k-Button--big"
      data-radium={true}
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "bottom": -2,
          "left": -2,
          "position": "relative",
          "width": "calc(100% + 4px)",
        }
      }
      tabIndex={null}
      type="button"
    >
      Custom text button
    </button>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
